# python-test-repo

./: .gitignore  pyproject.toml  requirements.txt
src/: main.py
